syntax = "proto3";
package genesis;

option go_package = "github.com/pokt-network/pocket/shared/types/genesis";

// TODO(andrew): move to utility module; pocket/issues/163
enum ActorType {
  App = 0;
  Node = 1;
  Fish = 2;
  Val = 3;
}

message Actor {
  ActorType actor_type = 1;
  string address = 2;
  string public_key = 3;
  repeated string chains = 4;
  // TODO(andrew): Rename `generic_param` to `actor_specific_param`
  string generic_param = 5;
  string staked_amount = 6;
  int64 paused_height = 7;
  int64 unstaking_height = 8;
  string output = 9;
}
